pkg/config/analysis/analyzers/testdata/destinationrule-waypoint-workload-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: server
  namespace: default
  labels:
    istio.io/use-waypoint: waypoint
spec:
  ports:
  - name: http
    port: 80
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: server
  namespace: default
spec:
  host: server.default.svc.cluster.local
  workloadSelector:
    matchLabels:
      app: client
